organize project and fix mdx

--- a/content/posts/a-fresh-start.mdx
+++ b/content/posts/a-fresh-start.mdx
@@ -5,4 +5,14 @@ date: 01-02-20
 poster: /posts/post3.avif
 ---
 
-When you change a source file, Contentlayer automatically updates the content cache, which prompts Next.js to reload the content on screen.
+# This is our first post
+
+Here is a regular paragraph
+
+here is a list:
+
+- Item one
+- Item two
+- Item three
+
+## This is an h2 element
