fix code highlight

--- a/content/posts/a-fresh-start.mdx
+++ b/content/posts/a-fresh-start.mdx
@@ -1,7 +1,7 @@
 ---
 title: A fresh start
-summary: With the new year, I think it's the perfect time to make this website fresh again
-date: 01-02-20
+description: With the new year, I think it's the perfect time to make this website fresh again
+publishedAt: 01-02-20
 poster: /posts/post3.avif
 ---
 
