--- a/content/posts/autoplay-videos-ux.mdx
+++ b/content/posts/autoplay-videos-ux.mdx
@@ -1,7 +1,7 @@
 ---
 title: Improving the User Experience of Autoplay Videos
-summary: The power of a single parameter to achieve a seamless result
-date: 01-01-23
+description: The power of a single parameter to achieve a seamless result
+publishedAt: 01-01-23
 poster: /posts/post1.avif
 ---
 
